<resources>
    <string name="app_name">YAFA</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="location_permission_denied">Nope</string>
    <string name="permission_required_toast">Give me permissions</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>

    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <string name="time">Time</string>
    <string name="totalTime">Duration</string>
    <string name="distance">Distance</string>
    <string name="timer">00:00</string>
    <string name="speed">Pace</string>
    <string name="avgSpeed">Avg speed</string>
    <string name="none">--</string>
    <string name="speed0">0.0</string>
    <string name="mps">min/miles</string>

    <string name="avgPace">Avg Pace</string>
    <string name="maxSpeed">Max Speed</string>
    <string name="elevationGain">Elevation Gain</string>
    <string name="elevationLoss">Elevation Loss</string>
    <string name="startTime">Start Time</string>
    <string name="startDate">Date</string>

    <!-- statistics fragment -->
    <string name="statisticTitle">Distances this month</string>
    <string name="avgPaceTitle">Average pace this month</string>
    <string name="totalSessions">Total sessions</string>
    <string name="elevation">Elevation</string>

    <!-- dialog for ending the session -->
    <string name="question">Would you like to save this session?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_app_id">1529085664060705</string>
</resources>
