<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.szczocik.yafa_yetanotherfitnessapp.Fragments.TimerFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/speed"
                android:gravity="center_horizontal" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/speedMeasurement"
                android:text="@string/none"
                android:textSize="20sp"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mps"
                android:gravity="center_horizontal"  />




        </LinearLayout>

        <LinearLayout
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/darkGrey"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="60"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"/>

            <Chronometer
                android:id="@+id/chronometer"
                android:textSize="50sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/timer"
                android:gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/darkGrey"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/avgSpeed"
                android:gravity="center_horizontal"/>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>
