<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.szczocik.yafa_yetanotherfitnessapp.Fragments.StatisticFragment">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/ligthGrey"
            android:layout_marginTop="@dimen/topMarginDetails"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="@dimen/statisticButtons"
                android:layout_height="@dimen/statisticButtons"
                android:background="@drawable/arrowleft"
                android:id="@+id/left"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textSize="@dimen/detailsLargerFontSize"
                android:textAlignment="center"
                android:gravity="center"
                android:id="@+id/statisticsMonth"/>

            <Button
                android:layout_width="@dimen/statisticButtons"
                android:layout_height="@dimen/statisticButtons"
                android:background="@drawable/arrowright"
                android:id="@+id/right"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="500dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/ligthGrey"
                    android:layout_marginBottom="@dimen/topMarginDetails"></LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/totalSessions"
                        android:textSize="@dimen/detailsFontSize"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/totalSessions"
                        android:textSize="@dimen/detailsFontSize"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/statisticTitle"
                    android:textSize="@dimen/detailsFontSize"
                    android:layout_marginTop="@dimen/appbar_padding_top"
                    android:layout_gravity="center"
                    android:gravity="center"/>

                <lecho.lib.hellocharts.view.ColumnChartView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/graphHeight"
                    android:id="@+id/distancesChart"
                    android:layout_marginTop="@dimen/fab_margin"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/avgPaceTitle"
                    android:textSize="@dimen/detailsFontSize"
                    android:layout_marginTop="@dimen/appbar_padding_top"
                    android:layout_gravity="center"
                    android:gravity="center"/>

                <lecho.lib.hellocharts.view.LineChartView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/graphHeight"
                    android:id="@+id/avgPaceChart"
                    android:layout_marginTop="@dimen/fab_margin"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/detailsFontSize"
                    android:layout_marginTop="@dimen/appbar_padding_top"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/elevation"/>

                <lecho.lib.hellocharts.view.PieChartView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/graphHeight"
                    android:id="@+id/elevationPieChart"
                    android:layout_marginTop="@dimen/fab_margin"/>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</FrameLayout>
